2007-02-17	Jannis Pohlmann <jannis@xfce.org>

	* Initial import.