@@ -1,0 +1,8 @@
+[Xfce Panel]
+Type=X-XFCE-PanelPlugin
+Encoding=UTF-8
+_Name=Time Out Plugin
+_Comment=Time out plugin for the Xfce panel
+Icon=xfce4-time-out-plugin
+X-XFCE-Exec=@libexecdir@/xfce4/panel-plugins/xfce4-time-out-plugin
+X-XFCE-Unique=true
