@@ -1,3 +1,10 @@
-2007-02-17	Jannis Pohlmann <jannis@xfce.org>
+2007-02-18	Jannis Pohlmann <jannis@xfce.org>
+
+	* icons/scalable/xfce4-time-out-plugin.svg: Add missing dummy 
+	  icon from the sample plugin.
+	* panel-plugin/xfce4-time-out-plugin.desktop.in.in: Add missing 
+	  desktop entry template.
+
+2007-02-18	Jannis Pohlmann <jannis@xfce.org>
 
 	* Initial import.
